--- a/Prueba.html
+++ b/Prueba.html
@@ -1529,7 +1529,7 @@ div.tocify {
 </div>
 </div>
 </div>
-<div id="section" class="section level3 unnumbered">
+<div id="section" class="section level3 unlsited">
 <h3></h3>
 </div>
 <div id="data-analysis" class="section level3">
@@ -1559,7 +1559,7 @@ div.tocify {
 </div>
 </div>
 </div>
-<div id="section-1" class="section level3 unnumbered">
+<div id="section-1" class="section level3 unlisted">
 <h3></h3>
 <table>
 <thead>
